force-app/main/default/objects/Partnerschaften__c/Partnerschaften__c.object-meta.xml
<CustomObject>
    <description>Not in use, no data</description>
    <label>EU-Partnerschaft</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnerschaften</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>