force-app/main/default/objects/Partnerschaften__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partnerschaften (Mitglied)</relationshipLabel>
    <relationshipName>Partnerschaft</relationshipName>
    <type>Lookup</type>
</CustomField>