force-app/main/default/objects/Partnerschaften__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EKG</fullName>
            </value>
            <value>
                <fullName>Einkäufer</fullName>
            </value>
            <value>
                <fullName>Träger</fullName>
            </value>
            <value>
                <fullName>Apotheke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>